# turingram

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs
src/client/: mod.rs  worker_0_8.rs
src/methods/: answer_callback_query.rs  edit_message_reply_markup.rs  edit_message_text.rs  leave_chat.rs  mod.rs  send_dice.rs  send_message.rs
src/types/: callback_query.rs  chat.rs  chat_type.rs  dice_type.rs  inline_keyboard_button.rs  inline_keyboard_button_kind.rs  message.rs  message_entity.rs  message_entity_type.rs  message_kind.rs  mod.rs  parse_mode.rs  reply_markup.rs  reply_parameters.rs  true.rs  update.rs  update_kind.rs  user.rs
